getData updated with new function

--- a/CreateUNet.ipynb
+++ b/CreateUNet.ipynb
@@ -66,11 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-2-7d3c3a9c4d99>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-7d3c3a9c4d99>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    folders = []\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def getData():\n",
+    "    \n",
     "    folders = []\n",
     "    training_set = dict()\n",
     "    idx = 0\n",
@@ -79,55 +89,40 @@
     "\n",
     "    #Looking for all the folders existing in train folder\n",
     "    for i in p.glob('*'):\n",
-    "\n",
+    "    \n",
     "        path = \"DATA/train/\"\n",
     "        path += i.name;\n",
-    "\n",
+    "    \n",
     "        f_path = pathlib.Path(path)\n",
     "        folders.append(f_path)\n",
     "\n",
     "\n",
     "    for p in folders:\n",
-    "\n",
+    "    \n",
     "        im_p = str(p)\n",
     "        im_p += \"/images/\"\n",
-    "        ma_p = str(p)\n",
-    "        ma_p += \"/masks/\"\n",
-    "\n",
+    "    \n",
     "        #First, we set the paths for the image and the masks\n",
     "\n",
     "        im_path = pathlib.Path(im_p)\n",
-    "        ma_path = pathlib.Path(ma_p)\n",
-    "\n",
-    "\n",
-    "        #Then, we read the image\n",
+    "    \n",
+    "        #Then, we read the image and the associated mask\n",
     "        name =\"\"\n",
     "        for i in im_path.glob('*.png'):\n",
     "            name = i.name\n",
-    "        im_p += name\n",
-    "        im = rgb2gray(imageio.imread(im_p))\n",
+    "            if name == \"mask.png\":\n",
+    "                mask_path = im_p + name\n",
+    "                mask = imageio.imread(mask_path)\n",
+    "            else:\n",
+    "                image_path = im_p + name\n",
+    "                im = imageio.imread(image_path)\n",
+    "    \n",
     "\n",
-    "\n",
-    "        masks = []\n",
-    "        #Then, we read every sub mask\n",
-    "        maskp = ma_p\n",
-    "        for i in ma_path.glob('*.png'):\n",
-    "            name =\"\"\n",
-    "            name = i.name\n",
-    "            ma_p = maskp\n",
-    "            ma_p += name\n",
-    "            sub_mask = imageio.imread(ma_p)\n",
-    "            masks.append(sub_mask)\n",
-    "\n",
-    "        mask = masks[0]\n",
-    "        for m in masks: \n",
-    "            mask = np.where((mask + m) > 200, 255, 0)\n",
-    "            #Finaly, we regroup every sub mask in a single one.\n",
-    "\n",
-    "\n",
-    "        #We add the image and its mask to the dictionary    \n",
+    "    \n",
     "        training_set[idx] = (im, mask)\n",
     "        idx += 1\n",
+    "\n",
+    "\n",
     "    return idx, training_set\n"
    ]
   },
